# ent/tx.go
@@ -34,6 +34,8 @@ type Tx struct {
 	ItemSurface *ItemSurfaceClient
 	// ListView is the client for interacting with the ListView builders.
 	ListView *ListViewClient
+	// Operation is the client for interacting with the Operation builders.
+	Operation *OperationClient
 	// Publication is the client for interacting with the Publication builders.
 	Publication *PublicationClient
 	// Relationship is the client for interacting with the Relationship builders.
@@ -195,6 +197,7 @@ func (tx *Tx) init() {
 	tx.ItemRevision = NewItemRevisionClient(tx.config)
 	tx.ItemSurface = NewItemSurfaceClient(tx.config)
 	tx.ListView = NewListViewClient(tx.config)
+	tx.Operation = NewOperationClient(tx.config)
 	tx.Publication = NewPublicationClient(tx.config)
 	tx.Relationship = NewRelationshipClient(tx.config)
 	tx.RelationshipType = NewRelationshipTypeClient(tx.config)
